# yumboard

./: .gitignore  AGENTS.md  Dockerfile  README.md  implementation.md
client/: Cargo.toml
client/src/: actions.rs  app.rs  dom.rs  geometry.rs  lib.rs  net.rs  palette.rs  persistence.rs  render.rs  state.rs  util.rs  ws.rs
k8s/: yumboard.yaml
public/: app.js  index.html  styles.css
server/: Cargo.toml
server/src/: handlers.rs  logic.rs  main.rs  sessions.rs  state.rs  storage.rs
shared/: Cargo.toml
shared/src/: lib.rs  session_format.rs
