[package]
name = "pfboard_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
pfboard_shared = { path = "../shared" }

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "CloseEvent",
  "CssStyleDeclaration",
  "Document",
  "DomRect",
  "Element",
  "Event",
  "EventTarget",
  "HtmlButtonElement",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlSpanElement",
  "KeyboardEvent",
  "Location",
  "MessageEvent",
  "PointerEvent",
  "WebSocket",
  "Window"
]
