[package]
name = "pfboard_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
bincode = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
pfboard_shared = { path = "../shared" }
