[package]
name = "yumboard_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-server = { version = "0.8", features = ["tls-rustls"] }
axum = { version = "0.7", features = ["ws"] }
async-trait = "0.1"
bincode = { version = "2", features = ["serde", "derive"] }
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "set-header"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7"] }
futures-util = "0.3"
yumboard_shared = { path = "../shared" }
